# bullhorn-website-backend

./: .gitignore  Cargo.toml  rocket.toml  t.html
migrations/2021-12-21-204722_create_writers/: up.sql
migrations/2021-12-21-205000_create_sections/: up.sql
migrations/2021-12-21-234752_create_articles/: down.sql  up.sql
migrations/2022-11-11-182623_article_submission/: down.sql  up.sql
src/: article.rs  article_submission.rs  auth.rs  endpoints.rs  error.rs  gdrive.rs  main.rs  paginated.rs  schema.rs  section.rs  writer.rs
src/gdrive/: drive_v3_types.rs
