[package]
name = "lemanbullhorn-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
serde = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4"
jsonwebtoken = { version = "8", default-features = false }
async-google-apis-common = "0.3"
hyper-rustls = { version = "0.22", features = ["rustls-native-certs"] }
anyhow = "1.0.62"

[dependencies.regex]
version = "1.5"
default-features = false
features = ["std", "perf"]
